platform/services/trino/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: trino
  namespace: trino
  labels:
    app.kubernetes.io/name: trino
    app.kubernetes.io/part-of: trino
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: trino
  template:
    metadata:
      labels:
        app.kubernetes.io/name: trino
    spec:
      serviceAccountName: trino
      nodeSelector:
        pool: core
      containers:
      - name: trino
        image: trinodb/trino:450
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
          name: http
        volumeMounts:
        - name: trino-config-vol
          mountPath: /etc/trino/node.properties
          subPath: node.properties
        - name: trino-config-vol
          mountPath: /etc/trino/jvm.config
          subPath: jvm.config
        - name: trino-config-vol
          mountPath: /etc/trino/config.properties
          subPath: config.properties
        - name: trino-config-vol
          mountPath: /etc/trino/catalog/iceberg.properties
          subPath: iceberg.properties
        - name: trino-config-vol
          mountPath: /etc/trino/catalog/tpch.properties
          subPath: tpch.properties
        resources:
          requests:
            cpu: 500m
            memory: 2048Mi
          limits:
            cpu: 1500m
            memory: 3072Mi
        readinessProbe:
          httpGet:
            path: /v1/info
            port: 8080
          initialDelaySeconds: 25
          periodSeconds: 10
          timeoutSeconds: 5
        livenessProbe:
          httpGet:
            path: /v1/info
            port: 8080
          initialDelaySeconds: 45
          periodSeconds: 15
          timeoutSeconds: 5
      volumes:
      - name: trino-config-vol
        configMap:
          name: trino-config
