platform/services/trino/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: trino
  namespace: trino
  labels:
    app.kubernetes.io/name: trino
spec:
  parentRefs:
  - name: platform-gateway
    namespace: kong
  hostnames:
  - "trino.34.87.177.6.nip.io"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: trino
      port: 8080
